--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@
 
 div > img {
     width: 100%;  
-    height: 100%;  
+    height: 90%;  
     object-fit: cover;  
 }
 
@@ -42,3 +42,8 @@ label {
     margin: 10px 0;
 }
 
+p {
+    margin: 0;
+    padding: 0;
+    color: #4831D4;
+}
