--- a/assets/style.css
+++ b/assets/style.css
@@ -1,95 +1,89 @@
 body {
-    background-image: url(""); 
-    background-repeat: no-repeat;
-    background-position: left;
-    background-size: cover;
-    font-family: 'Lato', sans-serif;
-    font-weight: 200;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: cover;
+  font-family: "Lato", sans-serif;
+  font-weight: 200;
 }
 
-
 #navBar {
-    background-color: #4831D4;
-    margin: 10px 0;
-    height: 130px;
+  background-color: #4831d4;
+  margin: 10px 0;
+  height: 130px;
 }
 
 #gif-container {
-    display: grid;  
-    grid-gap: 5px;  
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(2, 200px);  
-    margin: 0 5px;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(2, 200px);
+  margin: 0 5px;
 }
 
 .animal-image {
-    width: 100%;  
-    height: 90%;  
-    object-fit: cover;  
+  width: 100%;
+  height: 90%;
+  object-fit: cover;
 }
 
-#nav_img{
-    float: left;
-    margin: 15px;
+#nav_img {
+  float: left;
+  margin: 15px;
 }
 
 h1 {
-    padding: 10px;
-    color: #F25050;
-    font-family: 'Shadows Into Light', cursive;
-    font-size: 40px;
-    font-weight: 200;
+  padding: 10px;
+  color: #f25050;
+  font-family: "Shadows Into Light", cursive;
+  font-size: 40px;
+  font-weight: 200;
 }
 
-#add-gif, #clear-button, button{
-    clear: both;
-    padding: 10px;
-    margin: 5px 2px;
-    color: white;
-    background-color: #F25050;
-    font-size: 17px;
-    font-weight: 200;
-    border: solid 0.2px;
-    border-radius: 1px 7px;
+#add-gif,
+#clear-button,
+button {
+  clear: both;
+  padding: 10px;
+  margin: 5px 2px;
+  color: white;
+  background-color: #f25050;
+  font-size: 17px;
+  font-weight: 200;
+  border: solid 0.2px;
+  border-radius: 1px 7px;
 }
 
 #gif-input {
-    padding: 5px;
-    margin: 5px 2px;
-    border: 1px solid #4831D4;
-    border-radius: 4px;
+  padding: 5px;
+  margin: 5px 2px;
+  border: 1px solid #4831d4;
+  border-radius: 4px;
 }
 
 label {
-    color:  #4831D4;
-    font-size: 20px;
-    margin: 10px 0;
+  color: #4831d4;
+  font-size: 20px;
+  margin: 10px 0;
 }
 
 p {
-    margin: 0;
-    padding: 0;
-    color: #4831D4;
+  margin: 0;
+  padding: 0;
+  color: #4831d4;
 }
 
 #button-container {
-    margin: 0.5vw 0;
-}
-
-.fas fa-alicorn{
-    font-size: 20px;
-    color:  #CCF381;
+  margin: 0.5vw 0;
 }
 
 button:hover {
-    background-color: #4831D4;
-    color: white;
-    cursor: pointer;
+  background-color: #4831d4;
+  color: white;
+  cursor: pointer;
 }
 
-
-#user-interaction{
-    color: black;
-    font-size: 20px;
+#user-interaction {
+  color: black;
+  font-size: 20px;
 }
-
