--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,27 @@ body {
 #navBar {
   background-color: #4831d4;
   margin: 10px 0;
-  height: 130px;
+  height: 150px;
+  width: 100%;
+  display: inline-flex;
+}
+
+#nav-img-right {
+  max-width: 35%;
+}
+
+#nav-img-left {
+  margin: 40px 0px;
+}
+
+h1 {
+  text-align: right;
+  padding: 10px;
+  color: #f25050;
+  font-family: "Shadows Into Light", cursive;
+  font-size: 40px;
+  font-weight: 200;
+  width: 57%;
 }
 
 #gif-container {
@@ -25,19 +45,6 @@ body {
   width: 100%;
   height: 90%;
   object-fit: cover;
-}
-
-#nav_img {
-  float: left;
-  margin: 15px;
-}
-
-h1 {
-  padding: 10px;
-  color: #f25050;
-  font-family: "Shadows Into Light", cursive;
-  font-size: 40px;
-  font-weight: 200;
 }
 
 #add-gif,
@@ -86,4 +93,8 @@ button:hover {
 #user-interaction {
   color: black;
   font-size: 20px;
+}
+
+#footer {
+  max-width: 200px;
 }
